--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
+    <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
