Rename soundcloud js sdk file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <title>VueRadio</title>
+    <title>KultureFM</title>
 </head>
 <body>
     <div id="app"></div>
-    <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
+    <script src="assets/soundcloud-sdk-3.3.0.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
