--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="https://openlayers.org/en/v5.1.3/css/ol.css" type="text/css">
     <title>Kulture.fm</title>
 </head>
-<body>
+<body>        
     <div id="app"></div>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-firestore.js"></script>
     <script src="assets/soundcloud-sdk-3.3.0.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
