--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>        
     <div id="app"></div>
-    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
     <script src="assets/soundcloud-sdk-3.3.0.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
