--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>        
     <div id="app"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-LEpAqRN8wDYkVEh6TIgyDGLvxJHn2Fo"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
     <script src="assets/soundcloud-sdk-3.3.0.js"></script>
     <script src="dist/bundle.js"></script>
