--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fontawesome/all.min.css">
     <link rel="stylesheet" href="https://openlayers.org/en/v5.1.3/css/ol.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Hi+Melody|Roboto" rel="stylesheet">
     <title>Kulture.fm</title>
@@ -13,7 +13,7 @@
     <div id="app"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-LEpAqRN8wDYkVEh6TIgyDGLvxJHn2Fo"></script>
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
-    <script src="assets/soundcloud-sdk-3.3.0.js"></script>
+    <script src="assets/soundcloud/soundcloud-sdk-3.3.0.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
